--- a/public/css/qrky.css
+++ b/public/css/qrky.css
@@ -1,3 +1,29 @@
 .qrky-form:focus {
     border-color: #9F6DA6;
 }
+
+.qrky-edit-field {
+    margin-top: 5px;
+}
+
+.qrky-border {
+    border-top: 3px solid #9F6DA6;
+}
+
+.qrky-icon {
+    color: #9F6DA6;
+}
+
+.qrky-check:checked {
+    background-color: #9F6DA6 !important;
+}
+
+.qrky-nav-btn:hover {
+    background-color: black;
+    border-color: #9F6DA6;
+    color: white;
+}
+
+.qrky-bg {
+    background-color: #9F6DA6;
+}
